[package]
edition = "2021"
name = "message-service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = {version = "0.11.9", features = ["json"]}
rocket = {version = "0.5.0-rc.1", features = ["json"]}
